# data_taker_from_chart

./: README.md  Readme.md
src/: CMakeLists.txt  CMakeLists.txt~  Makefile  ProcessClass.cpp  ProcessClass.h  cmake_install.cmake  includes.h  init.cpp  main.cpp  tools.cpp  tools.h
